# xacmlfuzz

./: Makefile.am  README  bootstrap  configure.ac
m4/: xacml.m4
src/: Makefile.am  main.c  xacml_io_example.c
